# gps_based_outdoor_navigation

gps_bringup/: CMakeLists.txt  package.xml
gps_bringup/launch/: gps_gazebo_bringup.launch.py
gps_description/: CMakeLists.txt  package.xml
gps_description/launch/: publish_urdf.launch.py  robot_description.launch.py
gps_description/urdf/: cube.xacro  gazebo.xacro
gps_gazebo/: CMakeLists.txt  package.xml
gps_gazebo/launch/: spawn_gps_description.launch.py  spawn_robot_ros2.launch.xml  start_gps_world.launch.py
gps_gazebo/worlds/: airport.world  gps.world  gps_empty.world
gps_harware/: CMakeLists.txt  package.xml
gps_harware/launch/: mavros_launch.py
gps_navigation/: package.xml  setup.py
gps_navigation/gps_navigation/: chatgpt_waypoint.py  logged_waypoint_follower.py  simple_navigation.py  waypoint_input.py  waypoint_publisher.py
gps_navigation/launch/: dual_ekf_navsat.launch.py  gps_waypoint_follower.launch.py  mapviz.launch.py
rviz_satellite/demo/: demo.launch.xml  demo.rviz  publish_demo_data
