<?xml version="1.0"?>
<package format="3">
  <name>gps_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="makarand.ericrobotics@gmail.com">makarand</maintainer>
  <license>TODO: License declaration</license>

  <depend>navigation2</depend>
  <depend>robot_localization</depend>
  <depend>mapviz</depend>
  <depend>mapviz_plugins</depend>
  <depend>tile_map</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

